--- a/pagadurias/templates/pagaduriasAprobacion.html
+++ b/pagadurias/templates/pagaduriasAprobacion.html
@@ -14,6 +14,7 @@
                     <th class="py-3 px-4 text-left">Empleados</th>
                     <th class="py-3 px-4 text-left">Estados</th>
                     <th class="py-3 px-4 text-left">Asesor</th>
+                    <th class="py-3 px-4 text-left"></th>
                 </tr>
             </thead>
             <tbody class="text-gray-700">
@@ -21,13 +22,18 @@
                 <tr class="border-b border-gray-200 hover:bg-blue-50 transition duration-300">
                     <td class="py-3 px-4">{{ pagaduria.nombre }}</td>
                     <td class="py-3 px-4">{{ pagaduria.fechaCreacion }}</td>
-                    <td class="py-3 px-4">{{ pagaduria.empleados }}</td>
+                    <td class="py-3 px-4">{{ pagaduria.totalEmpleados }}</td>
                     <td class="py-3 px-4">
                         <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estado == 'Aprobado' %} bg-green-500 {% elif pagaduria.estado == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
                             {{ pagaduria.estado }}
                         </span>
                     </td>
                     <td class="py-3 px-4">{{ pagaduria.nombre }}</td>
+                    <td class="py-3 px-4">
+                        <a href="{% url 'updatePagaduria' pagaduria.id %}">
+                            Actualizar
+                        </a>
+                    </td>
                 </tr>
                 {% empty %}
                 <tr>
