--- a/pagadurias/templates/updatePagaduria.html
+++ b/pagadurias/templates/updatePagaduria.html
@@ -285,7 +285,7 @@
             </div>
             <div class="flex justify-between mt-6">
                 <button type="button" class="prev-btn">⬅️ Anterior</button>
-                <button type="submit" class="submit-btn">✅ Crear Pagaduría</button>
+                <button type="submit" class="submit-btn">✅ Actualizar</button>
             </div>
         </div>
     </form>
