--- a/pagadurias/templates/pagaduriasAprobacion.html
+++ b/pagadurias/templates/pagaduriasAprobacion.html
@@ -25,18 +25,18 @@
                     <td class="py-3 px-4">{{ pagaduria.fechaCreacion }}</td>
                     <td class="py-3 px-4">{{ pagaduria.totalEmpleados }}</td>
                     <td class="py-3 px-4">
-                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estado_financiero == 'Aprobado' %} bg-green-500 {% elif pagaduria.estado_financiero == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
-                            {{ pagaduria.estado_financiero }}
+                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoFinanciero == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoFinanciero == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
+                            {{ pagaduria.estadoFinanciero }}
                         </span>
                     </td>
                     <td class="py-3 px-4">
-                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estado_comercial == 'Aprobado' %} bg-green-500 {% elif pagaduria.estado_comercial == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
-                            {{ pagaduria.estado_comercial }}
+                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoComercial == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoComercial == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
+                            {{ pagaduria.estadoComercial }}
                         </span>
                     </td>
                     <td class="py-3 px-4">
-                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estado_riesgos == 'Aprobado' %} bg-green-500 {% elif pagaduria.estado_riesgos == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
-                            {{ pagaduria.estado_riesgos }}
+                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoRiesgos == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoRiesgos == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
+                            {{ pagaduria.estadoRiesgos }}
                         </span>
                     </td>
                     <td class="py-3 px-4">
