Add check financiera and approve pagaduria

--- a/pagadurias/templates/pagadurias.html
+++ b/pagadurias/templates/pagadurias.html
@@ -22,7 +22,7 @@
                     <td class="py-3 px-4">{{ pagaduria.nombre }}</td>
                     <td class="py-3 px-4">{{ pagaduria.totalEmpleados }}</td>
                     <td class="py-3 px-4">{{ pagaduria.fechaCreacion }}</td>
-                    <td class="py-3 px-4">{{ pagaduria.nombre }}</td>
+                    <td class="py-3 px-4">{{ pagaduria.asesorAsignado }}</td>
                     <td class="py-3 px-4">
                         <a href="{% url 'info_pagaduria' pagaduria.id %}" class="text-blue-500 hover:underline">
                             👁️ Ver
