--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -16,7 +16,7 @@
 		</aside>
 		
 		<!-- Contenido principal con margen para que no lo tape el sidebar -->
-		<main class="ml-64 pt-20 p-6 min-h-screen">
+		<main class="ml-64 pt-20 p-6 min-h-screen select-none">
 			<nav class="fixed top-0 left-0 w-full bg-gradient-to-r from-blue-450 to-blue-650 shadow-md p-4 flex justify-between items-center text-gray-100 z-50 font-sans">
 				{% include 'partials/navbar.html' %}
 			</nav>
