--- a/pagadurias/templates/createPagaduria.html
+++ b/pagadurias/templates/createPagaduria.html
@@ -93,17 +93,17 @@
             {{ sucursales.management_form }}
             <div id="sucursales-forms" class="border-2 border-blue-450 rounded-lg flex flex-col overflow-hidden shadow-lg">
                 <!-- Encabezado de la tabla -->
-                <div class="flex flex-row justify-between text-[10px] bg-blue-450 text-white p-3 font-semibold uppercase tracking-wide">
-                    <p class="flex-1 text-center">Departamento</p>
-                    <p class="flex-1 text-center">Ciudad</p>
-                    <p class="flex-1 text-center">Total Empleados</p>
-                    <p class="flex-1 text-center">Indefinidos</p>
-                    <p class="flex-1 text-center">Fijos</p>
-                    <p class="flex-1 text-center">Obra Labor</p>
-                    <p class="flex-1 text-center">Otros</p>
-                    <p class="flex-1 text-center">1 a 2 SMLV</p>
-                    <p class="flex-1 text-center">2 a 4 SMLV</p>
-                    <p class="flex-1 text-center">Más de 4 SMLV</p>
+                <div class="flex flex-row justify-between text-white py-2 px-3 font-semibold uppercase tracking-wide text-xs border-b-2 border-blue-450 bg-blue-450">
+                    <p class="w-36 text-center truncate">Departamento</p>
+                    <p class="flex-1 text-center truncate">Ciudad</p>
+                    <p class="flex-1 text-center truncate">Total Empleados</p>
+                    <p class="flex-1 text-center truncate">Indefinidos</p>
+                    <p class="flex-1 text-center truncate">Fijos</p>
+                    <p class="flex-1 text-center truncate">Obra Labor</p>
+                    <p class="flex-1 text-center truncate">Otros</p>
+                    <p class="flex-1 text-center truncate">1 a 2 SMLV</p>
+                    <p class="flex-1 text-center truncate">2 a 4 SMLV</p>
+                    <p class="flex-1 text-center truncate">Más de 4 SMLV</p>
                 </div>
                 <!-- Filas dinámicas -->
                 {% for form in sucursales %}
@@ -118,9 +118,6 @@
                     {{ form.empleadosSalario1y2|add_class:"" }}
                     {{ form.empleadosSalario2y4|add_class:"" }}
                     {{ form.empleadosSalariomax4|add_class:"" }}
-                    <p class="flex-1 text-center">
-                        <button type="button" class="text-red-500 hover:text-red-700 font-medium hover:underline transition-colors duration-200">Eliminar</button>
-                    </p>
                 </div>
                 {% endfor %}
             </div>
